[gd_scene load_steps=10 format=4 uid="uid://de4xfs0jlrm16"]

[ext_resource type="Script" uid="uid://bq57geiudvseu" path="res://scripts/mvp_scripts/mind_dive_game_manager.gd" id="1_bdqkq"]
[ext_resource type="Resource" uid="uid://bakhtagt0le26" path="res://resources/mvp_resources/mvp_levelconfig.tres" id="2_t4ajn"]
[ext_resource type="TileSet" uid="uid://b2kg0tj63ofru" path="res://resources/tilesets/MVP_tilesets.tres" id="2_tikf0"]
[ext_resource type="Texture2D" uid="uid://twlwayty7e4x" path="res://assets/mvp_assets/Background.png" id="3_gsa7p"]
[ext_resource type="Script" uid="uid://6pgehnp2eor5" path="res://scripts/mvp_scripts/victim.gd" id="4_wd34n"]
[ext_resource type="Script" uid="uid://b2080t5w5vkrs" path="res://scripts/mvp_scripts/items_overlay.gd" id="5_rbqln"]
[ext_resource type="Texture2D" uid="uid://ckmrrn2ep1237" path="res://assets/mvp_assets/Aki_Inspired.png" id="6_4e8io"]
[ext_resource type="Texture2D" uid="uid://di8chx1rhynes" path="res://assets/mvp_assets/Bar.png" id="8_gsa7p"]
[ext_resource type="Texture2D" uid="uid://dew76frfb6igp" path="res://assets/mvp_assets/Menu.png" id="9_4e8io"]

[node name="MindDiveGameManager" type="Node2D"]
script = ExtResource("1_bdqkq")
level_config = ExtResource("2_t4ajn")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(240, 320)
texture = ExtResource("3_gsa7p")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAgAAAAAAAAABAAAAAgAAAAAAAAACAAAAAgAAAAAAAAADAAAAAgAAAAAAAAAEAAAAAgAAAAAAAAAFAAAAAgAAAAAAAAAGAAAAAgAAAAAAAAAHAAAAAgAAAAAAAAAIAAAAAgAAAAAAAAAJAAAAAgAAAAAAAAAAAAEAAgAAAAAAAAAAAAIAAgAAAAAAAAAAAAMAAgAAAAAAAAAAAAQAAgAAAAAAAAAAAAUAAgAAAAAAAAAAAAYAAgAAAAAAAAAAAAcAAgAAAAAAAAAAAAgAAgAAAAAAAAAAAAkAAgAAAAAAAAAAAAoAAgAAAAAAAAABAAEAAgAAAAAAAAACAAEAAgAAAAAAAAADAAEAAgAAAAAAAAAEAAEAAgAAAAAAAAAFAAEAAgAAAAAAAAAGAAEAAgAAAAAAAAAHAAEAAgAAAAAAAAAIAAEAAgAAAAAAAAAJAAEAAgAAAAAAAAABAAIAAgAAAAAAAAACAAIAAgAAAAAAAAADAAIAAgAAAAAAAAAEAAIAAgAAAAAAAAAFAAIAAgAAAAAAAAAGAAIAAgAAAAAAAAAHAAIAAgAAAAAAAAAIAAIAAgAAAAAAAAAJAAIAAgAAAAAAAAAJAAMAAgAAAAAAAAAIAAMAAgAAAAAAAAAHAAMAAgAAAAAAAAAGAAMAAgAAAAAAAAAFAAMAAgAAAAAAAAAEAAMAAgAAAAAAAAADAAMAAgAAAAAAAAACAAMAAgAAAAAAAAABAAMAAgAAAAAAAAABAAQAAgAAAAAAAAACAAQAAgAAAAAAAAADAAQAAgAAAAAAAAAEAAQAAgAAAAAAAAAFAAQAAgAAAAAAAAAGAAQAAgAAAAAAAAAHAAQAAgAAAAAAAAAIAAQAAgAAAAAAAAAJAAQAAgAAAAAAAAABAAUAAgAAAAAAAAACAAUAAgAAAAAAAAADAAUAAgAAAAAAAAAEAAUAAgAAAAAAAAAFAAUAAgAAAAAAAAAGAAUAAgAAAAAAAAAHAAUAAgAAAAAAAAAIAAUAAgAAAAAAAAAJAAUAAgAAAAAAAAABAAYAAgAAAAAAAAACAAYAAgAAAAAAAAADAAYAAgAAAAAAAAAEAAYAAgAAAAAAAAAFAAYAAgAAAAAAAAAGAAYAAgAAAAAAAAAHAAYAAgAAAAAAAAAIAAYAAgAAAAAAAAAJAAYAAgAAAAAAAAABAAcAAgAAAAAAAAACAAcAAgAAAAAAAAADAAcAAgAAAAAAAAAEAAcAAgAAAAAAAAAFAAcAAgAAAAAAAAAGAAcAAgAAAAAAAAAHAAcAAgAAAAAAAAAIAAcAAgAAAAAAAAAJAAcAAgAAAAAAAAABAAgAAgAAAAAAAAACAAgAAgAAAAAAAAADAAgAAgAAAAAAAAAEAAgAAgAAAAAAAAAFAAgAAgAAAAAAAAAGAAgAAgAAAAAAAAAHAAgAAgAAAAAAAAAIAAgAAgAAAAAAAAAJAAgAAgAAAAAAAAABAAkAAgAAAAAAAAACAAkAAgAAAAAAAAADAAkAAgAAAAAAAAAEAAkAAgAAAAAAAAAFAAkAAgAAAAAAAAAGAAkAAgAAAAAAAAAHAAkAAgAAAAAAAAAIAAkAAgAAAAAAAAAJAAkAAgAAAAAAAAABAAoAAgAAAAAAAAACAAoAAgAAAAAAAAADAAoAAgAAAAAAAAAEAAoAAgAAAAAAAAAFAAoAAgAAAAAAAAAGAAoAAgAAAAAAAAAHAAoAAgAAAAAAAAAIAAoAAgAAAAAAAAAJAAoAAgAAAAAAAAAAAP//AgABAAAAAAABAP//AgABAAAAAAACAP//AgABAAAAAAADAP//AgABAAAAAAAEAP//AgABAAAAAAAFAP//AgABAAAAAAAGAP//AgABAAAAAAAHAP//AgABAAAAAAAIAP//AgABAAAAAAAJAP//AgABAAAAAAAKAP//AgABAAAAAAAKAAAAAgABAAAAAAAKAAEAAgABAAAAAAAKAAIAAgABAAAAAAAKAAMAAgABAAAAAAAKAAQAAgABAAAAAAAKAAUAAgABAAAAAAAKAAYAAgABAAAAAAAKAAcAAgABAAAAAAAKAAgAAgABAAAAAAAKAAkAAgABAAAAAAAKAAoAAgABAAAAAAAKAAsAAgABAAAAAAA=")
tile_set = ExtResource("2_tikf0")

[node name="Victim" type="Node2D" parent="."]
script = ExtResource("4_wd34n")

[node name="Sprite2D" type="Sprite2D" parent="Victim"]
position = Vector2(-174, 138)
scale = Vector2(0.11718753, 0.11718753)
texture = ExtResource("6_4e8io")

[node name="ItemsOverlay" type="Node2D" parent="."]
script = ExtResource("5_rbqln")
tilemap_path = NodePath("../TileMapLayer")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Panel" type="PanelContainer" parent="UI"]
offset_right = 40.0
offset_bottom = 40.0

[node name="VBox" type="VBoxContainer" parent="UI/Panel"]
layout_mode = 2

[node name="Title" type="Label" parent="UI/Panel/VBox"]
layout_mode = 2

[node name="ItemBar" type="HBoxContainer" parent="UI/Panel/VBox"]
layout_mode = 2

[node name="Controls" type="HBoxContainer" parent="UI/Panel/VBox"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="UI/Panel/VBox/Controls"]
layout_mode = 2

[node name="BackButton" type="Button" parent="UI/Panel/VBox/Controls"]
layout_mode = 2

[node name="ItemBar" type="Sprite2D" parent="UI"]
position = Vector2(1040, 336)
texture = ExtResource("8_gsa7p")

[node name="Menu" type="Sprite2D" parent="UI"]
position = Vector2(-560, -110)
texture = ExtResource("9_4e8io")

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2(-9.987295, -10.092793)
limit_left = 0
limit_top = 0
limit_right = 1152
limit_bottom = 648
